--- a/SMSTimetable/SMSTimetable/SenderWindow.xaml
+++ b/SMSTimetable/SMSTimetable/SenderWindow.xaml
@@ -26,8 +26,7 @@
         <CheckBox x:Name="SaveDatabaseCheckBox" Content="Сохранить в БД" HorizontalAlignment="Left" Margin="361,225,0,0" VerticalAlignment="Top" IsChecked="True"/>
         <CheckBox x:Name="SendSMSCheckBox" Content="Отправить SMS" HorizontalAlignment="Left" Margin="361,245,0,0" VerticalAlignment="Top" IsChecked="True"/>
         <Button x:Name="ExitButton" Content="Выход" HorizontalAlignment="Left" Margin="30,315,0,0" VerticalAlignment="Top" Width="75" Click="ExitButton_Click"/>
-        <Label x:Name="LoginedNameLabel" Content="[имя пользоателя]" HorizontalAlignment="Left" Margin="342,329,0,0" VerticalAlignment="Top" FontSize="10" Width="151"/>
-        <TextBlock HorizontalAlignment="Left" Margin="146,329,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
+        <TextBlock x:Name="LoginedNameTextBlock" HorizontalAlignment="Left" TextAlignment="Right" Margin="283,330,0,0" TextWrapping="Wrap" Text="[имя текущего пользователя системы]" VerticalAlignment="Top" Width="205" FontSize="10"/>
 
     </Grid>
 </Window>
