--- a/SMSTimetable/SMSTimetable/MainWindow.xaml
+++ b/SMSTimetable/SMSTimetable/MainWindow.xaml
@@ -9,7 +9,7 @@
         Title="Вход в систему" Height="254.214" Width="297.944" WindowStartupLocation="CenterScreen" Initialized="Window_Initialized">
     <Grid>
         <Label x:Name="LoginLabel" Content="Логин:" HorizontalAlignment="Left" Margin="32,53,0,0" VerticalAlignment="Top" Height="25" Width="54"/>
-        <Button x:Name="EnterButton" Content="Вход" HorizontalAlignment="Left" Margin="105,152,0,0" VerticalAlignment="Top" Width="75" Click="EnterButton_Click" Background="#FFDDDDDD"/>
+        <Button IsDefault="True" x:Name="EnterButton" Content="Вход" HorizontalAlignment="Left" Margin="105,152,0,0" VerticalAlignment="Top" Width="75" Click="EnterButton_Click" Background="#FFDDDDDD"/>
         <TextBox x:Name="LoginTextBox" HorizontalAlignment="Left" Height="30" Margin="91,53,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <GroupBox x:Name="LoginGroupBox" Header="Авторизация пользователя" HorizontalAlignment="Left" Height="184" Margin="21,9,0,0" VerticalAlignment="Top" Width="239" BorderBrush="#FF2B77BB">
             <CheckBox x:Name="SaveLoginCheckBox" Content="Запомнить" HorizontalAlignment="Left" Margin="66,96,0,0" VerticalAlignment="Top"/>
